--- a/src/app.html
+++ b/src/app.html
@@ -5,35 +5,26 @@
 	<meta charset="utf-8" />
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>altpa2026</title>
+	<title>APPortafoglio</title>
 	<style>
-.html{
-	
-	background: url(/3.png) repeat center center fixed;
-	min-height: 100%;
-	background-size: cover;
-  height: 100%;
-  overflow: hidden;
-        background-repeat:  repeat;
-
-  scroll-behavior: smooth; 
-
-}
+		.html {
+			background: url(/3.png) repeat center center fixed;
+			min-height: 100%;
+			background-size: cover;
+			height: 100%;
+			overflow: hidden;
+			background-repeat: repeat;
+			scroll-behavior: smooth;
+		}
 	</style>
 	<link rel="stylesheet" href="/style.css">
 	<script defer src="https://use.fontawesome.com/releases/v6.4.2/js/all.js"></script>
 	<script defer src="https://www.gstatic.com/charts/loader.js"></script>
-	
-	
 	%sveltekit.head%
 </head>
 
 <body data-sveltekit-preload-data="hover">
 	<div style="display: contents">%sveltekit.body%</div>
-
-	<div >
-
-	</div>
 </body>
 
 </html>
