--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,7 @@
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 	<link rel="stylesheet" href="/bootstrap-italia/css/bootstrap-italia.min.css" />
+	<link rel="stylesheet" href="/custom.css" />
 	<script defer src="https://www.gstatic.com/charts/loader.js"></script>
 	%sveltekit.head%
 </head>
